Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,22 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Area', 'City', 'Country', 'Population'])"
+       "['Area', 'City', 'Country', 'Population']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_keys = list(greenville.keys()\n",
+    "city_keys = list(greenville.keys())\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = None\n",
+    "city_values = list(greenville.values())\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
