--- a/index.ipynb
+++ b/index.ipynb
@@ -313,11 +313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = cities \n",
+    "salina = cities[-3] \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
@@ -335,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities\n",
     "los_cabos_pop # 288"
    ]
   },
