--- a/index.ipynb
+++ b/index.ipynb
@@ -342,11 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = cities\n",
+    "los_cabos_pop = cities[4]['Population']\n",
     "los_cabos_pop # 288"
    ]
   },
