Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,8 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -379,24 +381,13 @@
        "12"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(cities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "city_count = None\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
@@ -413,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = ''\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
