Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -431,8 +431,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pyeongchang_values = None\n",
+    "pyeongchang_values = cities\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
