--- a/index.ipynb
+++ b/index.ipynb
@@ -431,7 +431,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cities"
+   ]
   },
   {
    "cell_type": "code",
