Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,16 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyeongchang_values = cities\n",
+    "pyeongchang_values = cities[7].values()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
